Added the managesubjects.html file with its corresponding JS code..

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                         <p class="bsub"> Helps student keep track of scores and provides a graphical analysis on it's progress</p>
 
                     </div>
+
+                    <div class="bgroup">
+                        <button class="button" onclick="location.href='page/managesubjects.html';">Manage Subjects</button>
+                        <p class="bsub"> Help students manage thier subjects.</p>
+
+                    </div>
                 </div>
             </div>
             
