some additions and many others

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="bgroup">
-                        <button class="button" onclick="location.href='page/managesubjects.html';">Manage Subjects</button>
+                        <button class="button" onclick="location.href='page/subjects.html';">Subjects</button>
                         <p class="bsub"> Help students manage thier subjects.</p>
 
                     </div>
